attempt to fix background sizing on safari

--- a/public/styles.css
+++ b/public/styles.css
@@ -55,3 +55,10 @@
 		background-position: 50% 50%;
 	}
 }
+
+body {
+	height: 100%;
+	width: 100%;
+	overflow: scroll;
+	-webkit-overflow-scrolling: touch;
+}
