--- a/src/components/ImageSlide/ImageSlide.css
+++ b/src/components/ImageSlide/ImageSlide.css
@@ -10,4 +10,5 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+	overflow: hidden;
 }
