--- a/src/components/MenuBar/MenuBar.css
+++ b/src/components/MenuBar/MenuBar.css
@@ -32,7 +32,7 @@
         padding:0 20px;
         text-decoration-style: none;
         padding-top: 12px;
-        padding-bottom: 13px;
+        padding-bottom: 11px;
     }
 
     .menuBar li a {
@@ -137,7 +137,7 @@
         padding:0 20px;
         text-decoration-style: none;
         padding-top: 12px;
-        padding-bottom: 13px;
+        padding-bottom: 11px;
     }
 
     .menuBar li a {
